# project_67

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  h origin --tags  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  nightly.yml
configs/: base.yaml  dev.yaml  prod.yaml
docs/: architecture.md  assumptions.md  scope_decisions.md  taste_dimensions.md
reports/: ranking_metrics.json
scripts/: download_data.py  run_pipeline.sh  simulate_intervention.py
src/ntg/churn/: train_model.py
src/ntg/common/: io.py  time.py  utils.py
src/ntg/data/: ingestion.py  schemas.py  splits.py  validation.py
src/ntg/embeddings/: embedding_model.py
src/ntg/evaluation/: metrics.py
src/ntg/experiments/: assign.py  design.py  simulate_ab.py
src/ntg/features/: build_interaction_features.py  build_item_features.py  build_user_features.py
src/ntg/graph/: build_graph.py  item_similarity.py  taste_clusters.py
src/ntg/models/: ranker.py
src/ntg/pipelines/: build_dataset.py  build_dataset_duckdb.py  make_figures.py  run_experiment.py  run_experiment_3arm.py  score_users.py  simulate_interventions.py
src/ntg/reporting/: make_figures.py  metrics_summary.py  plots.py
src/ntg/revenue/: impact_simulation.py  ltv.py  revenue_risk.py
src/ntg/utils/: metrics.py
tests/: conftest.py
tests/integration/: test_day10_ab_3arm_smoke.py  test_day1_build_dataset_duckdb_smoke.py  test_day2_features_smoke.py  test_day3_graph_smoke.py  test_day4_ranker_smoke.py  test_day6_score_users_smoke.py
tests/unit/: test_splits.py
tests/unit/churn/: test_churn_scores_range.py  test_churn_training_contract.py  test_labels_schema.py
tests/unit/common/: test_io.py  test_time.py  test_utils.py
tests/unit/data/: test_ingestion_contract.py  test_schemas.py  test_splits_global.py  test_splits_leakage.py  test_splits_per_user.py  test_validation.py
tests/unit/evaluation/: test_metrics_basic.py  test_metrics_edge_cases.py  test_reports_json_schema.py
tests/unit/experiments/: test_ab_bucketing_determinism.py  test_ab_design_math.py  test_ab_policy_roi_gate.py  test_ab_results_schema.py
tests/unit/features/: test_feature_leakage_guards.py  test_interaction_features_schema.py  test_interaction_features_values.py  test_item_features_schema.py  (+3 more)
(+21 files in other folders)
