[project]
name = "project-67"
version = "0.1.0"
description = ""
authors = [
    { name = "MohanSaiBandarupalli", email = "mb2279@njit.edu" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.2,<3.0",
    "pyarrow>=15,<30",
    "numpy>=2.0,<3.0",
    "duckdb (>=1.4.3,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

# --- Poetry config (needed for src-layout packaging) ---
[tool.poetry]
name = "project-67"
version = "0.1.0"
description = "Netflix Neural Taste Graph (NTG) prototype: offline recommender + risk radar."
authors = ["MohanSaiBandarupalli <mb2279@njit.edu>"]
readme = "README.md"
packages = [{ include = "ntg", from = "src" }]
